# genpass

./: Cargo.toml  LICENSE  README.md
RU/: README.md
src/: args.rs  check_pass.rs  gen_pass.rs  main.rs  show_help.rs  show_version.rs
