[package]
name = "genpass"
version = "1.2.0"
authors = ["whynotq"]
edition = "2024"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rand = "0.9"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
figleter = "0.2"
enable-ansi-support = "0.2"
arboard = "3.5"